--- a/src/assets/styles/login.module.scss
+++ b/src/assets/styles/login.module.scss
@@ -4,7 +4,11 @@
     color: white;
     padding: 2.5rem;
     border-radius: 10px;
-
+    & input[type="file"] {
+      color: white;
+      cursor: pointer;
+      border: none;
+    }
     & .buy__btn {
         border: none;
         outline: none;
@@ -34,3 +38,4 @@
         }
       }
 }
+
